// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`formatBusinessReportsForCsv Snapshot Tests > should format ecosystem-report correctly 1`] = `
[
  {
    "Bounce rate": null,
    "Company Analysis Description": [],
    "Company Analysis Findings": [],
    "Company Analysis Source": [],
    "Ecosystem": [
      "{"name":"Partner 1","url":"https://partner1.example.com","relationship":"Supplier"}",
      "{"name":"Partner 2","url":"https://partner2.example.com","relationship":"Customer"}",
    ],
    "Estimated Monthly Visits": null,
    "Facebook Details": "",
    "Facebook Link": null,
    "Instagram Details": "",
    "Instagram Link": null,
    "Merchant ID": "business-123",
    "Merchant Name": "Test Company",
    "Merchant URL": "https://example.com",
    "Monitoring Alert": "No",
    "Notes to Status Change": null,
    "Pages per visit": null,
    "Pricing Findings": [],
    "Pricing Findings Details": [],
    "Pricing Sources": [],
    "Report ID": "report-123",
    "Report Status": "completed",
    "Risk Level": "low",
    "Scan Creation Date": "2023-01-01T12:00:00.000Z",
    "Scan Type": "Onboarding",
    "Source": [],
    "Status Change Date": "2023-01-01T12:00:00.000Z",
    "Time on site": null,
    "Traffic Findings": [],
    "Traffic Sources": "",
    "Violation Type": [],
    "Violation URL (if applicable)": [],
    "Website LOB": null,
    "Website MCC": null,
    "Website Reputation Findings": [],
    "Website Reputation Reason": [],
    "Website Reputation Source": [],
    "Website Structure Findings": [],
    "Why Our AI Flagged this?": [],
  },
]
`;

exports[`formatBusinessReportsForCsv Snapshot Tests > should format example-report correctly 1`] = `
[
  {
    "Bounce rate": null,
    "Company Analysis Description": [
      "Dollars Markets Ltd has a low trust score and is flagged for concerns regarding its regulatory status, customer complaints, and lack of transparency. The broker operates under a Mauritius FSC license, which is considered weak regulatory oversight.",
    ],
    "Company Analysis Findings": [
      "Negative Company Reputation",
    ],
    "Company Analysis Source": [
      "https://www.wikifx.com/en/dealer/2749402775.html",
    ],
    "Ecosystem": [],
    "Estimated Monthly Visits": null,
    "Facebook Details": "",
    "Facebook Link": null,
    "Instagram Details": "",
    "Instagram Link": null,
    "Merchant ID": "cm8772isp04pcs00k8eccnakc",
    "Merchant Name": "ForOr",
    "Merchant URL": {
      "url": "https://ballerine.com/",
    },
    "Monitoring Alert": "No",
    "Notes to Status Change": null,
    "Pages per visit": null,
    "Pricing Findings": [
      "Unusually High Prices",
    ],
    "Pricing Findings Details": [
      "The listed price of the denim jacket is significantly higher than the typical market price for such items.",
    ],
    "Pricing Sources": [
      "https://www.nigoo.store/NIGO-Washed-Old-Short-Vintage-Denim-Jacket-Men-and-Women-Fashion-Blue-Denim-Jacket-Ngvp-nigo6554-p23212559.html",
    ],
    "Report ID": "atb5c09dfqf78v1812mvdui8",
    "Report Status": "pending-review",
    "Risk Level": "high",
    "Scan Creation Date": "2023-01-01T12:00:00.000Z",
    "Scan Type": "Onboarding",
    "Source": [
      "Trading Instruments: Currency Pairs, Precious Metals, Indices, Cryptocurrencies (31 Cryptocurrencies), Share Stocks, Energy & ETFs",
    ],
    "Status Change Date": "2023-01-01T12:00:00.000Z",
    "Time on site": null,
    "Traffic Findings": [
      "Low Traffic Volumes",
    ],
    "Traffic Sources": "",
    "Violation Type": [
      "Cryptocurrency",
    ],
    "Violation URL (if applicable)": [
      "https://dollarsmarkets.com/",
    ],
    "Website LOB": null,
    "Website MCC": null,
    "Website Reputation Findings": [
      "Listings on Scam Reporting Websites",
    ],
    "Website Reputation Reason": [
      "The website nigoo.store is featured on a scam reporting website with a review questioning its legitimacy.",
    ],
    "Website Reputation Source": [
      "https://www.scam-detector.com/validator/nigoo-store-review/",
    ],
    "Website Structure Findings": [
      "Missing Terms and Conditions (T&C)",
      "Missing About Us",
    ],
    "Why Our AI Flagged this?": [
      "The website is a trading platform that markets forex and CFD services and explicitly lists cryptocurrencies among its trading instruments. This directly aligns with the trigger conditions for both the 'content-cryptocurrency' violation (trading/sale of digital currencies) and the 'content-securities-trading' violation (offering FX, CFDs, and other asset trading services).",
    ],
  },
]
`;

exports[`formatBusinessReportsForCsv Snapshot Tests > should format mcc-report correctly 1`] = `
[
  {
    "Bounce rate": null,
    "Company Analysis Description": [],
    "Company Analysis Findings": [],
    "Company Analysis Source": [],
    "Ecosystem": [],
    "Estimated Monthly Visits": null,
    "Facebook Details": "",
    "Facebook Link": null,
    "Instagram Details": "",
    "Instagram Link": null,
    "Merchant ID": "business-123",
    "Merchant Name": "Test Company",
    "Merchant URL": "https://example.com",
    "Monitoring Alert": "No",
    "Notes to Status Change": null,
    "Pages per visit": null,
    "Pricing Findings": [],
    "Pricing Findings Details": [],
    "Pricing Sources": [],
    "Report ID": "report-123",
    "Report Status": "completed",
    "Risk Level": "low",
    "Scan Creation Date": "2023-01-01T12:00:00.000Z",
    "Scan Type": "Onboarding",
    "Source": [],
    "Status Change Date": "2023-01-01T12:00:00.000Z",
    "Time on site": null,
    "Traffic Findings": [],
    "Traffic Sources": "",
    "Violation Type": [],
    "Violation URL (if applicable)": [],
    "Website LOB": null,
    "Website MCC": "5734 - Computer Software Stores",
    "Website Reputation Findings": [],
    "Website Reputation Reason": [],
    "Website Reputation Source": [],
    "Website Structure Findings": [],
    "Why Our AI Flagged this?": [],
  },
]
`;

exports[`formatBusinessReportsForCsv Snapshot Tests > should format minimal-report correctly 1`] = `
[
  {
    "Bounce rate": null,
    "Company Analysis Description": [],
    "Company Analysis Findings": [],
    "Company Analysis Source": [],
    "Ecosystem": [],
    "Estimated Monthly Visits": null,
    "Facebook Details": "",
    "Facebook Link": null,
    "Instagram Details": "",
    "Instagram Link": null,
    "Merchant ID": "correlation-123",
    "Merchant Name": "Test Company",
    "Merchant URL": "https://example.com",
    "Monitoring Alert": "No",
    "Notes to Status Change": null,
    "Pages per visit": null,
    "Pricing Findings": [],
    "Pricing Findings Details": [],
    "Pricing Sources": [],
    "Report ID": "report-123",
    "Report Status": "completed",
    "Risk Level": "low",
    "Scan Creation Date": "2023-01-01T12:00:00.000Z",
    "Scan Type": "Onboarding",
    "Source": [],
    "Status Change Date": "2023-01-01T12:00:00.000Z",
    "Time on site": null,
    "Traffic Findings": [],
    "Traffic Sources": "",
    "Violation Type": [],
    "Violation URL (if applicable)": [],
    "Website LOB": null,
    "Website MCC": null,
    "Website Reputation Findings": [],
    "Website Reputation Reason": [],
    "Website Reputation Source": [],
    "Website Structure Findings": [],
    "Why Our AI Flagged this?": [],
  },
]
`;

exports[`formatBusinessReportsForCsv Snapshot Tests > should format sandbox-report correctly 1`] = `
[
  {
    "Bounce rate": null,
    "Company Analysis Description": [],
    "Company Analysis Findings": [],
    "Company Analysis Source": [],
    "Ecosystem": [],
    "Estimated Monthly Visits": null,
    "Facebook Details": "",
    "Facebook Link": null,
    "Instagram Details": "",
    "Instagram Link": null,
    "Merchant ID": null,
    "Merchant Name": null,
    "Monitoring Alert": "No",
    "Notes to Status Change": null,
    "Pages per visit": null,
    "Pricing Findings": [],
    "Pricing Findings Details": [],
    "Pricing Sources": [],
    "Report ID": null,
    "Risk Level": null,
    "Scan Creation Date": null,
    "Source": [],
    "Status Change Date": null,
    "Time on site": null,
    "Traffic Findings": [],
    "Traffic Sources": "",
    "Violation Type": [],
    "Violation URL (if applicable)": [],
    "Website LOB": null,
    "Website MCC": null,
    "Website Reputation Findings": [],
    "Website Reputation Reason": [],
    "Website Reputation Source": [],
    "Website Structure Findings": [],
    "Why Our AI Flagged this?": [],
  },
]
`;

exports[`formatBusinessReportsForCsv Snapshot Tests > should format social-media-report correctly 1`] = `
[
  {
    "Bounce rate": null,
    "Company Analysis Description": [],
    "Company Analysis Findings": [],
    "Company Analysis Source": [],
    "Ecosystem": [],
    "Estimated Monthly Visits": null,
    "Facebook Details": "followers: 10K, created: 2020-01-01",
    "Facebook Link": "https://facebook.com/testcompany",
    "Instagram Details": "followers: 5K, created: 2021-01-01",
    "Instagram Link": "https://instagram.com/testcompany",
    "Merchant ID": "business-123",
    "Merchant Name": "Test Company",
    "Merchant URL": "https://example.com",
    "Monitoring Alert": "No",
    "Notes to Status Change": null,
    "Pages per visit": null,
    "Pricing Findings": [],
    "Pricing Findings Details": [],
    "Pricing Sources": [],
    "Report ID": "report-123",
    "Report Status": "completed",
    "Risk Level": "low",
    "Scan Creation Date": "2023-01-01T12:00:00.000Z",
    "Scan Type": "Onboarding",
    "Source": [],
    "Status Change Date": "2023-01-01T12:00:00.000Z",
    "Time on site": null,
    "Traffic Findings": [],
    "Traffic Sources": "",
    "Violation Type": [],
    "Violation URL (if applicable)": [],
    "Website LOB": null,
    "Website MCC": null,
    "Website Reputation Findings": [],
    "Website Reputation Reason": [],
    "Website Reputation Source": [],
    "Website Structure Findings": [],
    "Why Our AI Flagged this?": [],
  },
]
`;

exports[`formatBusinessReportsForCsv Snapshot Tests > should format status-notes-report correctly 1`] = `
[
  {
    "Bounce rate": null,
    "Company Analysis Description": [],
    "Company Analysis Findings": [],
    "Company Analysis Source": [],
    "Ecosystem": [],
    "Estimated Monthly Visits": null,
    "Facebook Details": "",
    "Facebook Link": null,
    "Instagram Details": "",
    "Instagram Link": null,
    "Merchant ID": "business-123",
    "Merchant Name": "Test Company",
    "Merchant URL": "https://example.com",
    "Monitoring Alert": "No",
    "Notes to Status Change": null,
    "Pages per visit": null,
    "Pricing Findings": [],
    "Pricing Findings Details": [],
    "Pricing Sources": [],
    "Report ID": "report-123",
    "Report Status": "rejected",
    "Risk Level": "low",
    "Scan Creation Date": "2023-01-01T12:00:00.000Z",
    "Scan Type": "Onboarding",
    "Source": [],
    "Status Change Date": "2023-01-01T12:00:00.000Z",
    "Time on site": null,
    "Traffic Findings": [],
    "Traffic Sources": "",
    "Violation Type": [],
    "Violation URL (if applicable)": [],
    "Website LOB": null,
    "Website MCC": null,
    "Website Reputation Findings": [],
    "Website Reputation Reason": [],
    "Website Reputation Source": [],
    "Website Structure Findings": [],
    "Why Our AI Flagged this?": [],
  },
]
`;

exports[`formatBusinessReportsForCsv Snapshot Tests > should format traffic-report correctly 1`] = `
[
  {
    "Bounce rate": null,
    "Company Analysis Description": [],
    "Company Analysis Findings": [],
    "Company Analysis Source": [],
    "Ecosystem": [],
    "Estimated Monthly Visits": "50K",
    "Facebook Details": "",
    "Facebook Link": null,
    "Instagram Details": "",
    "Instagram Link": null,
    "Merchant ID": "business-123",
    "Merchant Name": "Test Company",
    "Merchant URL": "https://example.com",
    "Monitoring Alert": "No",
    "Notes to Status Change": null,
    "Pages per visit": null,
    "Pricing Findings": [],
    "Pricing Findings Details": [],
    "Pricing Sources": [],
    "Report ID": "report-123",
    "Report Status": "completed",
    "Risk Level": "low",
    "Scan Creation Date": "2023-01-01T12:00:00.000Z",
    "Scan Type": "Onboarding",
    "Source": [],
    "Status Change Date": "2023-01-01T12:00:00.000Z",
    "Time on site": null,
    "Traffic Findings": [],
    "Traffic Sources": "direct: 45%, search / organic: 30%",
    "Violation Type": [],
    "Violation URL (if applicable)": [],
    "Website LOB": null,
    "Website MCC": null,
    "Website Reputation Findings": [],
    "Website Reputation Reason": [],
    "Website Reputation Source": [],
    "Website Structure Findings": [],
    "Why Our AI Flagged this?": [],
  },
]
`;

exports[`formatBusinessReportsForCsv Snapshot Tests > should format violations-report correctly 1`] = `
[
  {
    "Bounce rate": null,
    "Company Analysis Description": [
      "Found issue with company registration",
    ],
    "Company Analysis Findings": [
      "Company Issue 1",
    ],
    "Company Analysis Source": [
      "https://company-registry.example.com",
    ],
    "Ecosystem": [],
    "Estimated Monthly Visits": null,
    "Facebook Details": "",
    "Facebook Link": null,
    "Instagram Details": "",
    "Instagram Link": null,
    "Merchant ID": "business-123",
    "Merchant Name": "Test Company",
    "Merchant URL": "https://example.com",
    "Monitoring Alert": "Yes",
    "Notes to Status Change": null,
    "Pages per visit": null,
    "Pricing Findings": [],
    "Pricing Findings Details": [],
    "Pricing Sources": [],
    "Report ID": "report-123",
    "Report Status": "completed",
    "Risk Level": "medium",
    "Scan Creation Date": "2023-01-01T12:00:00.000Z",
    "Scan Type": "Onboarding",
    "Source": [
      "Prohibited text example",
    ],
    "Status Change Date": "2023-01-01T12:00:00.000Z",
    "Time on site": null,
    "Traffic Findings": [],
    "Traffic Sources": "",
    "Violation Type": [
      "Content Issue 1",
    ],
    "Violation URL (if applicable)": [
      "https://content.example.com",
    ],
    "Website LOB": null,
    "Website MCC": null,
    "Website Reputation Findings": [
      "Scam Warning",
    ],
    "Website Reputation Reason": [
      "Signs of potential fraud",
    ],
    "Website Reputation Source": [
      "https://scam-alerts.example.com",
    ],
    "Website Structure Findings": [],
    "Why Our AI Flagged this?": [
      "Found prohibited content",
    ],
  },
]
`;
